  ------------------------------------------------------------------------------
    RC2:
    - clearing of the failed boot flag added for reboot and shutdown at boot time
    - pending boot-off boot time script command support added,
      this removes the limitation of boot-on/off not working before reboot/shutdown
    - interactive mode at boot time now displays help split into pages
    RC1:
    - partial defragmentation was added to decrease number of fragments
      even when there are no free space on disk
      to hold all fragments of file together
    - volume optimization algorithm was improved to prevent useless
      additional optimization passes
    - one little bug preventing optimization from being stopped was fixed
      in driver
    - volume optimization algorithm was improved to prevent skipping
      heavily fragmented parts of the processed volume
    - progress is now added to the GUI window caption,
      so it is displayed in the tooltip of the taskbar icon
    - cryptic single character progress label was replaced
      by the localized operation names
    - file system type detection was rewritten to be more reliable
      and detect UDF-formatted volumes properly
    - fixed a problem where the case of the names of the help pages
      launched from the configuration dialog did not match
    - fixed a problem, where .lua files would get executed instead of edited,
      if "Lua for Windows" was installed
    - 10 seconds delay is skiped on boot time scan, if only one keyboard is present
    - added language selector to the GUI package
    - Hindi translation was added
    - the following translations were updated:

      Croatian, Danish, Dutch, French, Greek, Polish, Russian, Serbian,
      Swedish, Turkish


  Version 4.3.0  2010-05-29
  ------------------------------------------------------------------------------
    RC4:
    - GUI window resizing feature was added
    - scaling according to the screens DPI settings added