@@ -7,6 +7,8 @@ HISTORY
     - pending boot-off boot time script command support added,
       this removes the limitation of boot-on/off not working before reboot/shutdown
     - interactive mode at boot time now displays help split into pages
+    - escape key handling added to break the boot time script execution
+    - winx_kb_read() call added to zenwinx library
     RC1:
     - partial defragmentation was added to decrease number of fragments
       even when there are no free space on disk
